# wenchi-poles

./: .gitignore
rosbags/: rosbag_recorder.sh
src/robosense_localization/: CMakeLists.txt  package.xml  r-CMakeLists.txt
src/robosense_localization/cfg/: SamplingSurfaceNormalDataPointsFilter3.yaml  current_filter.yaml  demo.rviz  field_test.rviz  icp_filter.yaml  localmap_filter.yaml  show_field_test.rviz
src/robosense_localization/data/: readme.md
src/robosense_localization/data/0910_1/: loc_map_0.vtk  loc_map_1.vtk  loc_map_10.vtk  loc_map_11.vtk  loc_map_12.vtk  loc_map_13.vtk  loc_map_14.vtk  loc_map_15.vtk  loc_map_16.vtk  loc_map_17.vtk  loc_map_18.vtk  loc_map_19.vtk  loc_map_2.vtk  loc_map_20.vtk  loc_map_21.vtk  loc_map_22.vtk  loc_map_23.vtk  loc_map_3.vtk  loc_map_30.vtk  loc_map_31.vtk  loc_map_32.vtk  loc_map_33.vtk  loc_map_34.vtk  loc_map_35.vtk  loc_map_36.vtk  loc_map_37.vtk  loc_map_38.vtk  loc_map_39.vtk  loc_map_4.vtk  loc_map_40.vtk  loc_map_41.vtk  loc_map_42.vtk  loc_map_43.vtk  loc_map_44.vtk  loc_map_45.vtk  loc_map_46.vtk  loc_map_47.vtk  loc_map_48.vtk  loc_map_49.vtk  loc_map_5.vtk  (+19 more)
src/robosense_localization/data/0910_2/: loc_map_0.vtk  loc_map_1.vtk  loc_map_10.vtk  loc_map_11.vtk  loc_map_12.vtk  loc_map_13.vtk  loc_map_14.vtk  loc_map_15.vtk  loc_map_16.vtk  loc_map_2.vtk  loc_map_22.vtk  loc_map_23.vtk  loc_map_25.vtk  loc_map_3.vtk  loc_map_4.vtk  loc_map_5.vtk  loc_map_6.vtk  loc_map_7.vtk  loc_map_8.vtk  loc_map_9.vtk
src/robosense_localization/doc/: COPYRIGHT  README.md
src/robosense_localization/include/: canbus.h  encoders.h  extraction.h  lidar_localization.h  localization.h
src/robosense_localization/launch/: demo.launch  field_test.launch  show_field_test.launch
src/robosense_localization/model/: blue_open.dae  default.urdf
src/robosense_localization/msg/: canbus.msg  encoders.msg
src/robosense_localization/src/: extraction.cpp  lidar_localization.cpp  localization.cpp
src/ros_rslidar/rslidar_pointcloud/data/LM102/: ChannelNum.csv  angle.csv  curves.csv
src/ros_rslidar/rslidar_pointcloud/data/LM128/: ChannelNum.csv  angle.csv  curves.csv
src/ros_rslidar/rslidar_pointcloud/data/LM142/: ChannelNum.csv  angle.csv  curves.csv
src/ros_rslidar/rslidar_pointcloud/data/LM218/: ChannelNum.csv  curves.csv
src/ros_rslidar/rslidar_pointcloud/data/LM218/ChannelNum/: ChannelNum.csv
src/ros_rslidar/rslidar_pointcloud/data/LM218/Pitch/: angle.csv
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/D0/: D0G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/D1/: D1G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/D2/: D2G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/D3/: D3G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/D4/: D4G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/D5/: D5G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/D6/: D6G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/D7/: D7G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/U0/: U0G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/U1/: U1G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/U2/: U2G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/U3/: U3G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/U4/: U4G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/U5/: U5G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/U6/: U6G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM218/ROW/U7/: U7G.txt
src/ros_rslidar/rslidar_pointcloud/data/LM219/: ChannelNum.csv  angle.csv  curves.csv
src/ros_rslidar/rslidar_pointcloud/data/LM225/: ChannelNum.csv  angle.csv  curves.csv
src/ros_rslidar/rslidar_pointcloud/data/LM254/: ChannelNum.csv  angle.csv  curves.csv
src/ros_rslidar/rslidar_pointcloud/launch/: only_cloud.launch
src/rviz_satellite/launch/: demo (copy).gps  demo (copy).rviz  demo.gps  demo.rviz  demo_map.rviz
src/rviz_satellite/src/: aerialmap_display.cpp
src/sensors/: CMakeLists.txt  package.xml  readme.md
src/sensors/cfg/: sensors.rviz
src/sensors/include/sensors/: canbus.h  encoders.h  gpgga.h  gprmc.h  gpvtg.h  memsic_type.h  qxwz_rtcm.h  rtcm.h  sensor.h
src/sensors/launch/: all_in.launch
src/sensors/msg/: canbus.msg  gpgga.msg  gprmc.msg  gpvtg.msg  rtcm.msg
src/sensors/src/: FindM.cpp  canbus.cpp  encoder.cpp  gps.cpp  memsic_type.cpp  nav440.cpp  sensor.cpp  visualize_GPS_path.cpp
src/test_programme/: CMakeLists.txt  package.xml
src/test_programme/src/: mutliThread.cpp  mutliThread.h
