<?xml version="1.0"?>
<package>
  <name>robosense_localization</name>
  <version>0.0.0</version>
  <description>The robosense_localization package</description>

  <maintainer email="wenchi@todo.todo">wenchi</maintainer>

  <license>TODO</license>


  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libpointmatcher_ros</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>libpointmatcher_ros</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
